Add my bio to homepage

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <!-- to here  -->
       <div class="about">
         <div class="bio-left">
-          <h2>Jamie Wittenberg</h2>
-          <img src="https://cdn.glitch.com/00c06d6f-7133-4af5-a6b1-8d1b754d7919%2FIMG_1545.JPG?1526330516520" />
+          <h2>Alex Beciana</h2>
+          <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/27066821_1867915966616955_7535292612727801244_n.jpg?_nc_cat=110&_nc_ht=scontent-lga3-1.xx&oh=8f9e5a398cfe38664cace6aa8d5229c6&oe=5D6E8F37" />
         </div>
         <div class="bio-right">
-          <p> I used to be a high school math teacher; I made the transition to tech working with The Flatiron School, Wyncode Academy, and Codecademy. Now I'm at Major League Hacking, perfecting the learning experience for our community. With nearly a decade of teaching experience and close to five in tech, I have learned how to translate understanding the needs of a heterogenous group of students into painstaking empathy for my users. </p>
+          <p> Born and raised in the suburbs of Long Island, NY (no one’s perfect). Writing the words that no one wants to read (jokes on you, you're here...I love you). The World’s Okay-est Guitarist - I play guitar and sing in a band called Ugly Americans. Living in a world of feeling nostalgic - I'm all about old cartoons and movies. I can be found at record stores, shows, behind the scenes at King Pizza Records, and always working on Sweet Static. Indulging in good times and exercising my demons. </p>
         </div>
       </div>
     </div>
